force-app/main/default/objects/Rollup_Filter__mdt/Rollup_Filter__mdt.object-meta.xml
<CustomObject>
    <description>Junction metadata relationship between Rollup and Filters</description>
    <label>Rollup Filter</label>
    <pluralLabel>Rollup Filters</pluralLabel>
</CustomObject>