force-app/main/default/objects/Rollup_Filter__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <referenceTo>Filter__mdt</referenceTo>
    <relationshipLabel>Rollup Filters</relationshipLabel>
    <relationshipName>Rollup_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>