force-app/main/default/objects/Rollup_Filter__mdt/fields/Rollup__c.field-meta.xml
<CustomField>
    <fullName>Rollup__c</fullName>
    <label>Rollup</label>
    <referenceTo>Rollup__mdt</referenceTo>
    <relationshipLabel>Rollup Filters</relationshipLabel>
    <relationshipName>Rollup_Filters</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>